ui-kit__cards and first card is under construction, changed dropdown z-index value

--- a/src/components/card/__find-room/card__find-room.pug
+++ b/src/components/card/__find-room/card__find-room.pug
@@ -3,7 +3,7 @@ include ../../button/__mean-oval/button__mean-oval.pug
 
 mixin cardFindRoom()
   .find-room.card-style_default
-    span.find-room__title Найдём номера под ваши пожелания
+    span.find-room__title.font-size_h1 Найдём номера под ваши пожелания
     .find-room__dropdowns_date-picker.twinline-gap_longest
       +inputs([
         {
