--- a/src/components/card/__find-room/card__find-room.scss
+++ b/src/components/card/__find-room/card__find-room.scss
@@ -1,4 +1,11 @@
+@import "@variables";
+
 .find-room {
+  &__title {
+    font-weight: bold;
+    color: $valhalla;
+  }
+
   &__submit-button {
     margin-top: 11px;
   }
