Registration card is under construction

--- a/src/components/card/__registration/card__registration.scss
+++ b/src/components/card/__registration/card__registration.scss
@@ -1,4 +1,10 @@
 .registration {
+
+  & > * {
+    display: grid;
+    grid-gap: 10px;
+  }
+
   &__title {
 
   }
@@ -23,7 +29,7 @@
     }
 
     &_login {
-
+      margin-top: 10px;
     }
   }
 }
