--- a/src/components/card/__registration/card__registration.pug
+++ b/src/components/card/__registration/card__registration.pug
@@ -6,28 +6,34 @@ include ../../button/__toggle/button__toggle.pug
 mixin cardRegistration()
   .registration.card-style_default
     .registration__title
-      span.find-room__title.font-size_h1 Найдём номера под ваши пожелания
+      span.find-room__title.font-size_h1 Регистрация аккаунта
+
     .registration__input_basic-data
       +inputs([
         { placeholder: "Имя" },
         { placeholder: "Фамилия" }
       ])
-      +radioButtons([
-        { id: "registration_male",   label: "Мужчина", pressed: true },
-        { id: "registration_female", label: "Женщина" }
-      ])
+      .registration__radio-buttons.twinline-gap_own
+        +radioButtons([
+          { id: "registration_male",   label: "Мужчина", pressed: true },
+          { id: "registration_female", label: "Женщина" }
+        ])
+
     .registration__input_date-of-birth
       +inputs([
         { title: "дата рождения", placeholder: "ДД.ММ.ГГГГ" }
       ])
+
     .registration__input_login-data
       +inputs([
-        { placeholder: "Email", title: "данные для входа в сервис", type: "Email" }
+        { placeholder: "Email", title: "данные для входа в сервис", type: "Email" },
         { placeholder: "Пароль" }
       ])
+
       +toggleButtons([
         { groupname: "registration_toggles", label: "Получать спецпредложения", pressed: false },
       ])
+
     .registration__button_submit
       +meanOvalButtons({
         groupname: "registration__submit-button",
@@ -40,7 +46,8 @@ mixin cardRegistration()
           }
         ]
       })
-    .registration__button_login
+
+    .registration__button_login.twinline-gap_longest
       span.registration__bottom-text Уже есть аккаунт на Toxin
       +meanOvalButtons({
         groupname: "uik-fe__mob-mid",
