--- a/src/pages/ui-kit/__cards/ui-kit__cards.pug
+++ b/src/pages/ui-kit/__cards/ui-kit__cards.pug
@@ -1,4 +1,5 @@
 include ../../../components/logo/logo.pug
+include ../../../components/card/__registration/card__registration.pug
 include ../../../components/card/__find-room/card__find-room.pug
 
 body.ui-kit__body.bgcolor_whisper
@@ -7,4 +8,5 @@ body.ui-kit__body.bgcolor_whisper
   main.ui-kit__main
     .headers-n-footers
       +cardFindRoom()
+      +cardRegistration()
   footer.ui-kit__footer
