--- a/src/pages/ui-kit/ui-kit.scss
+++ b/src/pages/ui-kit/ui-kit.scss
@@ -6,6 +6,7 @@
     width: 1440px;
     font-family: Montserrat, Quicksand, sans-serif;
     user-select: none;
+    background-color: white;
   }
 
   &__header {
