--- a/src/components/button/__star-rate/button__star-rate.pug
+++ b/src/components/button/__star-rate/button__star-rate.pug
@@ -1,6 +1,6 @@
 include ../../material-icon-cell/material-icon-cell.pug
 
-mixin stars( ratings=[] )
+mixin starRateButtons( ratings=[] )
   each rating in ratings
     - let num = 0
     
