--- a/src/pages/ui-kit/__cards/ui-kit__cards.pug
+++ b/src/pages/ui-kit/__cards/ui-kit__cards.pug
@@ -2,7 +2,7 @@ include ../../../components/logo/logo.pug
 include ../../../components/card/__registration/card__registration.pug
 include ../../../components/card/__find-room/card__find-room.pug
 
-body.ui-kit__body.bgcolor_whisper
+body.ui-kit__body.bg-color_whisper
   header.ui-kit__header
     +logo({ type: "monochrome" })
   main.ui-kit__main
