--- a/src/pages/ui-kit/__colors-n-type/ui-kit__colors-n-type.pug
+++ b/src/pages/ui-kit/__colors-n-type/ui-kit__colors-n-type.pug
@@ -2,7 +2,7 @@ include ../../../components/logo/logo.pug
 include ../../../components/color-sample/color-sample.pug
 include ../../../components/type-sample/type-sample.pug
 
-body.ui-kit__body
+body.ui-kit__body.bg-color_white
   header.ui-kit__header
     +logo({ type: "monochrome" })
   main.ui-kit__main
