--- a/src/pages/ui-kit/__headers-n-footers/ui-kit__headers-n-footers.pug
+++ b/src/pages/ui-kit/__headers-n-footers/ui-kit__headers-n-footers.pug
@@ -2,7 +2,7 @@ include ../../../components/logo/logo.pug
 include ../../../components/header/header.pug
 include ../../../components/footer/footer.pug
 
-body.ui-kit__body.bgcolor_whisper
+body.ui-kit__body.bg-color_whisper
   header.ui-kit__header
     +logo({ type: "monochrome" })
   main
