Refactored pages includes paths

--- a/src/pages/ui-kit/__colors-n-type/ui-kit__colors-n-type.pug
+++ b/src/pages/ui-kit/__colors-n-type/ui-kit__colors-n-type.pug
@@ -1,6 +1,6 @@
-include ../../../components/logo/logo.pug
-include ../../../components/color-sample/color-sample.pug
-include ../../../components/type-sample/type-sample.pug
+include /components/logo/logo.pug
+include /components/color-sample/color-sample.pug
+include /components/type-sample/type-sample.pug
 
 body.ui-kit__body.bg-color_white
   header.ui-kit__header
