--- a/src/pages/ui-kit/__form-elements/ui-kit__form-elements.pug
+++ b/src/pages/ui-kit/__form-elements/ui-kit__form-elements.pug
@@ -1,19 +1,19 @@
-include ../../../components/logo/logo.pug
-include ../../../components/input/input.pug
-include ../../../components/advantage-bar/advantage-bar.pug
-include ../../../components/title-bar/title-bar.pug
-include ../../../components/range-slider/range-slider.pug
-include ../../../components/pagination/pagination.pug
-include ../../../components/bullet-list/bullet-list.pug
-include ../../../components/comment-bar/comment-bar.pug
-include ../../../components/expandable/__checkbox-list/expandable__checkbox-list.pug
+include /components/logo/logo.pug
+include /components/input/input.pug
+include /components/advantage-bar/advantage-bar.pug
+include /components/title-bar/title-bar.pug
+include /components/range-slider/range-slider.pug
+include /components/pagination/pagination.pug
+include /components/bullet-list/bullet-list.pug
+include /components/comment-bar/comment-bar.pug
+include /components/expandable/__checkbox-list/expandable__checkbox-list.pug
 
-include ../../../components/button/__toggle/button__toggle.pug
-include ../../../components/button/__like/button__like.pug
-include ../../../components/button/__radio/button__radio.pug
-include ../../../components/button/__star-rate/button__star-rate.pug
-include ../../../components/button/__checkbox/button__checkbox.pug
-include ../../../components/button/__mean-oval/button__mean-oval.pug
+include /components/button/__toggle/button__toggle.pug
+include /components/button/__like/button__like.pug
+include /components/button/__radio/button__radio.pug
+include /components/button/__star-rate/button__star-rate.pug
+include /components/button/__checkbox/button__checkbox.pug
+include /components/button/__mean-oval/button__mean-oval.pug
 
 body.ui-kit__body.bg-color_white
   header.ui-kit__header
