--- a/src/pages/ui-kit/__cards/ui-kit__cards.pug
+++ b/src/pages/ui-kit/__cards/ui-kit__cards.pug
@@ -1,6 +1,6 @@
-include ../../../components/logo/logo.pug
-include ../../../components/card/__registration/card__registration.pug
-include ../../../components/card/__find-room/card__find-room.pug
+include /components/logo/logo.pug
+include /components/card/__registration/card__registration.pug
+include /components/card/__find-room/card__find-room.pug
 
 body.ui-kit__body.bg-color_whisper
   header.ui-kit__header
