--- a/src/pages/ui-kit/__headers-n-footers/ui-kit__headers-n-footers.pug
+++ b/src/pages/ui-kit/__headers-n-footers/ui-kit__headers-n-footers.pug
@@ -1,6 +1,6 @@
-include ../../../components/logo/logo.pug
-include ../../../components/header/header.pug
-include ../../../components/footer/footer.pug
+include /components/logo/logo.pug
+include /components/header/header.pug
+include /components/footer/footer.pug
 
 body.ui-kit__body.bg-color_whisper
   header.ui-kit__header
