Refactored components includes paths

--- a/src/components/card/__registration/card__registration.pug
+++ b/src/components/card/__registration/card__registration.pug
@@ -1,7 +1,7 @@
-include ../../input/input.pug
-include ../../button/__mean-oval/button__mean-oval.pug
-include ../../button/__radio/button__radio.pug
-include ../../button/__toggle/button__toggle.pug
+include /components/input/input.pug
+include /components/button/__mean-oval/button__mean-oval.pug
+include /components/button/__radio/button__radio.pug
+include /components/button/__toggle/button__toggle.pug
 
 mixin cardRegistration()
   .registration.card-style_default
