--- a/src/components/expandable/__checkbox-list/expandable__checkbox-list.pug
+++ b/src/components/expandable/__checkbox-list/expandable__checkbox-list.pug
@@ -1,6 +1,6 @@
-include ../../title-bar/title-bar.pug
-include ../../button/__checkbox/button__checkbox.pug
-include ../../material-icon-cell/material-icon-cell.pug
+include /components/title-bar/title-bar.pug
+include /components/button/__checkbox/button__checkbox.pug
+include /components/material-icon-cell/material-icon-cell.pug
 
 mixin checkboxList( item )
   - const iconFlippedClass = item.expanded ? 'icon_flipped' : ''
