--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -1,7 +1,7 @@
-include ../logo/logo.pug
-include ../input/input.pug
-include ../title-bar/title-bar.pug
-include ../navigation-bar/navigation-bar.pug
+include /components/logo/logo.pug
+include /components/input/input.pug
+include /components/title-bar/title-bar.pug
+include /components/navigation-bar/navigation-bar.pug
 
 mixin footer( item )
   case item.type
