--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -1,6 +1,6 @@
-include ../logo/logo.pug
-include ../navigation-bar/navigation-bar.pug
-include ../button/__mean-oval/button__mean-oval.pug
+include /components/logo/logo.pug
+include /components/navigation-bar/navigation-bar.pug
+include /components/button/__mean-oval/button__mean-oval.pug
 
 mixin header( item )
   .header
