--- a/src/components/input/input.pug
+++ b/src/components/input/input.pug
@@ -1,6 +1,6 @@
-include ../expandable/__dropdown/expandable__dropdown.pug
-include ../title-bar/title-bar.pug
-include ../material-icon-cell/material-icon-cell.pug
+include /components/expandable/__dropdown/expandable__dropdown.pug
+include /components/title-bar/title-bar.pug
+include /components/material-icon-cell/material-icon-cell.pug
 
 mixin inputs( items=[] )
   each item in items
