--- a/src/components/navigation-bar/__link/navigation-bar__link.pug
+++ b/src/components/navigation-bar/__link/navigation-bar__link.pug
@@ -1,4 +1,4 @@
-include ../../material-icon-cell/material-icon-cell.pug
+include /components/material-icon-cell/material-icon-cell.pug
 
 mixin link( item )
   - const styleClass = item.bold ? 'link__elem_bold' : ''
