--- a/src/components/navigation-bar/navigation-bar.pug
+++ b/src/components/navigation-bar/navigation-bar.pug
@@ -1,4 +1,4 @@
-include ../title-bar/title-bar.pug
+include /components/title-bar/title-bar.pug
 include __link/navigation-bar__link.pug
 
 mixin navigationBar( item )
