--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -1,5 +1,5 @@
-include ../../components/logo/logo.pug
-include ../../components/navigation-bar/navigation-bar.pug
+include /components/logo/logo.pug
+include /components/navigation-bar/navigation-bar.pug
 
 body.ui-kit__body
   header.ui-kit__header
