--- a/src/components/button/__like/button__like.pug
+++ b/src/components/button/__like/button__like.pug
@@ -1,4 +1,4 @@
-include ../../material-icon-cell/material-icon-cell.pug
+include /components/material-icon-cell/material-icon-cell.pug
 
 mixin likeButtons( items=[] )
   - let buttonsCount = 0
