--- a/src/components/button/__star-rate/button__star-rate.pug
+++ b/src/components/button/__star-rate/button__star-rate.pug
@@ -1,4 +1,4 @@
-include ../../material-icon-cell/material-icon-cell.pug
+include /components/material-icon-cell/material-icon-cell.pug
 
 mixin starRateButtons( ratings=[] )
   each rating in ratings
