--- a/src/components/card/__find-room/card__find-room.pug
+++ b/src/components/card/__find-room/card__find-room.pug
@@ -1,5 +1,5 @@
-include ../../input/input.pug
-include ../../button/__mean-oval/button__mean-oval.pug
+include /components/input/input.pug
+include /components/button/__mean-oval/button__mean-oval.pug
 
 mixin cardFindRoom()
   .find-room.card-style_default
