--- a/src/components/comment-bar/comment-bar.pug
+++ b/src/components/comment-bar/comment-bar.pug
@@ -1,4 +1,4 @@
-include ../../components/button/__like/button__like.pug
+include /components/button/__like/button__like.pug
 
 mixin commentBar( items=[] )
   each item in items
