Minor text-style fixes

--- a/src/components/button/__toggle/button__toggle.scss
+++ b/src/components/button/__toggle/button__toggle.scss
@@ -30,7 +30,7 @@
     display: inherit;
     align-items: flex-start;
     font-size: 14px;
-    opacity: .75;
+    color: rgba($valhalla, .75);
   }
 }
 
