--- a/src/components/card/__find-room/card__find-room.pug
+++ b/src/components/card/__find-room/card__find-room.pug
@@ -4,7 +4,7 @@ include /components/button/__mean-oval/button__mean-oval.pug
 mixin cardFindRoom()
   .find-room.card-style_default
     span.find-room__title.font-size_h1 Найдём номера под ваши пожелания
-    .find-room__dropdowns_date-picker.twinline-gap_longest
+    .find-room__dropdowns_date-picker.twins-grid-line
       +inputs([
         {
           id: "find-room__date-picker_01",
