--- a/src/pages/404/404.pug
+++ b/src/pages/404/404.pug
@@ -1,5 +1,10 @@
-body 
-  header 
-  main 
-    span 404 not found)))
-  footer 
+include /components/footer/footer.pug
+include /components/header/header.pug
+
+body.ui-kit__body.bg-color_whisper
+  header.ui-kit__header
+    +header({authorization: true})
+  main.ui-kit__main.notfound
+    span.notfound_text 404 NOT FOUND
+  footer.ui-kit__footer
+    +footer({type: 'default'})
