--- a/src/pages/ui-kit/__cards/ui-kit__cards.pug
+++ b/src/pages/ui-kit/__cards/ui-kit__cards.pug
@@ -1,6 +1,7 @@
 include /components/logo/logo.pug
 include /components/card/__registration/card__registration.pug
 include /components/card/__find-room/card__find-room.pug
+include /components/card/__login/card__login.pug
 
 body.ui-kit__body.bg-color_whisper
   header.ui-kit__header
@@ -9,4 +10,5 @@ body.ui-kit__body.bg-color_whisper
     .headers-n-footers
       +cardFindRoom()
       +cardRegistration()
+      +cardLogin()
   footer.ui-kit__footer
