--- a/src/pages/ui-kit/__colors-n-type/ui-kit__colors-n-type.pug
+++ b/src/pages/ui-kit/__colors-n-type/ui-kit__colors-n-type.pug
@@ -6,19 +6,20 @@ body.ui-kit__body.bg-color_white
   header.ui-kit__header
     +logo({ type: "monochrome" })
   main.ui-kit__main
-    +colorSamples([
-      { hexcolor: "#1F2041", opacity: 100, title: "Dark Shade 100%" },
-      { hexcolor: "#1F2041", opacity: 75,  title: "Dark Shade 75%" },
-      { hexcolor: "#1F2041", opacity: 50,  title: "Dark Shade 50%" },
-      { hexcolor: "#1F2041", opacity: 25,  title: "Dark Shade 25%" },
-      { hexcolor: "#1F2041", opacity: 5,   title: "Dark Shade 5%" },
-      { hexcolor: "#BC9CFF", opacity: 100, title: "Purple" },
-      { hexcolor: "#6FCF97", opacity: 100, title: "Green" },
-    ])
-    +typeSamples([
-      { tagname: "H1",   note: "This one is the sub-section or widget title" },
-      { tagname: "H2",   note: "Next one is the item title inside widgets" },
-      { tagname: "H3",   note: "THIS IS A LABEL OR CTA TEXT" },
-      { tagname: "Body", note: "This is the body text which is used for most of the design, like paragraphs, lists, etc." },
-    ])
+    .colors-n-type-samples
+      +colorSamples([
+        { hexcolor: "#1F2041", opacity: 100, title: "Dark Shade 100%" },
+        { hexcolor: "#1F2041", opacity: 75,  title: "Dark Shade 75%" },
+        { hexcolor: "#1F2041", opacity: 50,  title: "Dark Shade 50%" },
+        { hexcolor: "#1F2041", opacity: 25,  title: "Dark Shade 25%" },
+        { hexcolor: "#1F2041", opacity: 5,   title: "Dark Shade 5%" },
+        { hexcolor: "#BC9CFF", opacity: 100, title: "Purple" },
+        { hexcolor: "#6FCF97", opacity: 100, title: "Green" },
+      ])
+      +typeSamples([
+        { tagname: "H1",   note: "This one is the sub-section or widget title" },
+        { tagname: "H2",   note: "Next one is the item title inside widgets" },
+        { tagname: "H3",   note: "THIS IS A LABEL OR CTA TEXT" },
+        { tagname: "Body", note: "This is the body text which is used for most of the design, like paragraphs, lists, etc." },
+      ])
   footer.ui-kit__footer
