--- a/src/components/color-sample/color-sample.scss
+++ b/src/components/color-sample/color-sample.scss
@@ -1,18 +1,15 @@
 @import "@variables";
 
-.color-items__holder {
-  display: grid;
-  grid-row: 7;
-  grid-gap: 20px;
-  width: 282px;
-  margin: 0;
-}
-
 .color-item {
   display: flex;
-  width: 100%;
-  height: 100%;
-  color: $valhalla;
+
+  &__holder {
+    display: grid;
+    grid-row: 7;
+    grid-gap: 20px;
+    width: 282px;
+    margin: 0;
+  }
 
   &__sample {
     width: 70px;
@@ -21,16 +18,14 @@
   }
 
   &__description {
-    display: inherit;
+    display: flex;
     margin-left: 40px;
-    font-style: normal;
-    font-size: 19px;
     line-height: 28px;
     flex-direction: column;
     justify-content: center;
   }
 
-  &__title {
-    font-weight: bold;
+  &__color-hexcode {
+    font-weight: normal;
   }
 }
