Refactored multiple mixins typographical rules

--- a/src/components/button/__toggle/button__toggle.pug
+++ b/src/components/button/__toggle/button__toggle.pug
@@ -4,4 +4,4 @@ mixin toggleButtons( items=[] )
 
     .toggle-button 
       input.toggle-button__elem( type='checkbox' checked=buttonChecked )
-      label.toggle-button__label #{item.label}
+      label.toggle-button__label.custom-font-style_body #{item.label}
