--- a/src/pages/ui-kit/__form-elements/ui-kit__form-elements.pug
+++ b/src/pages/ui-kit/__form-elements/ui-kit__form-elements.pug
@@ -106,7 +106,7 @@ body.ui-kit__body.bg-color_white
         .form-elements__block.block__checkbox-buttons
           .form-elements__element
             +titleBar("checkbox buttons")
-            .checkbox-buttons__array
+            .checkbox-button__array
               +checkboxButtons({
                 groupname: "uik-fe__checkbox-allows", 
                 checkboxes: [
@@ -125,7 +125,7 @@ body.ui-kit__body.bg-color_white
         .form-elements__block.block__toggle-buttons
           .form-elements__element
             +titleBar("toggle")
-            .toggle-buttons__array
+            .toggle-button__array
               +toggleButtons([
                 { groupname: "uik-fe_toggles", label: "Получать спецпредложения", pressed: true },
                 { groupname: "uik-fe_toggles", label: "Получать спецпредложения", pressed: false }
