--- a/src/components/bullet-list/bullet-list.pug
+++ b/src/components/bullet-list/bullet-list.pug
@@ -3,4 +3,4 @@ include /components/title-bar/title-bar.pug
 mixin bulletList( texts=[] )
   .bullet-list 
     each text in texts 
-      .bullet-list__row #{text}
+      .bullet-list__row.custom-font-style_body #{text}
