--- a/src/components/button/__checkbox/button__checkbox.scss
+++ b/src/components/button/__checkbox/button__checkbox.scss
@@ -1,18 +1,18 @@
 @import "@variables";
 
-.checkbox-buttons__container {
-  display: grid;
-  justify-items: start;
-  grid-template-rows: repeat(2, auto);
-  grid-gap: 10px;
-}
-
 .checkbox-button {
   display: grid;
   grid-template-columns: repeat(2, auto);
   grid-gap: 10px;
   align-items: start;
   margin-right: 20px;
+
+  &__container {
+    display: grid;
+    justify-items: start;
+    grid-template-rows: repeat(2, auto);
+    grid-gap: 10px;
+  }
 
   & * {
     cursor: pointer;
