--- a/src/components/title-bar/title-bar.pug
+++ b/src/components/title-bar/title-bar.pug
@@ -2,7 +2,7 @@ mixin titleBar( text, state, id )
   - const itemId = id ? id : ''
   - const stateText = id ? '' : state
 
-  .title-bar
+  .title-bar.custom-font-style_h3
     span.title-bar__title #{text}
     if state 
       span.title-bar__state( id=itemId ) #{stateText}
